--- a/Aqar_Price_prediction.ipynb
+++ b/Aqar_Price_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "e4f604cb",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sklearn\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "437b45d6",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "4a575f5a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "c1ae1dcc",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4   784      950  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,17 +198,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "101dc259",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2934 entries, 0 to 2950\n",
+      "Columns: 348 entries, streetwidth to neighborhood_حي هجر\n",
+      "dtypes: float64(1), int64(2), uint8(345)\n",
+      "memory usage: 1.1 MB\n"
+     ]
+    }
+   ],
    "source": [
     "df.drop(labels=\"sublocation\",axis=1,inplace=True)\n",
     "df['streetwidth'] = df['streetwidth'].fillna(int(np.mean(df[\"streetwidth\"])))\n",
     "df['purpose'].fillna('سكني', inplace = True)\n",
     "outprice = df[(df['Pricepm']>= 10000)].index\n",
     "df.drop(outprice,inplace = True)\n",
-    "df = pd.get_dummies(data=df, columns=['mainlocation', 'purpose', 'frontage', 'neighborhood'])\n"
+    "df = pd.get_dummies(data=df, columns=['mainlocation', 'purpose', 'frontage', 'neighborhood'])\n",
+    "df.info()"
    ]
   },
   {
@@ -225,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8e425371",
+   "id": "0236c9d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c2162450",
+   "id": "fa5ae897",
    "metadata": {},
    "outputs": [],
    "source": [
